--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -47,4 +47,5 @@ a:hover {
 #imagen-blog {
     width: 50%; /* Reduce el ancho a la mitad del tamaño original */
     height: auto; /* Mantiene la proporción de la altura con respecto al nuevo ancho */
+    border-radius: 30%/50%; /* Hace que los bordes de la imagen sean completamente redondos */
 }
