se agrego una linea mas de texto al post y se cambio el tipoe de fuente

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif; /* Establece Arial como la fuente principal */
+    font-family: Verdana, sans-serif; /* Establece Arial como la fuente principal */
     margin: 0;
     padding: 0;
     display: flex;
