se redujo el mtamaño de la imgen principal

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -4,8 +4,8 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end; /* Alinea el contenido al final (derecha) del contenedor flex */
+    align-items: right;
     height: 100vh;
 }
 
@@ -45,7 +45,7 @@ a:hover {
     color: rgb(6, 9, 233); /* Cambia el color de los enlaces al pasar el mouse */
 }
 #imagen-blog {
-    width: 50%; /* Reduce el ancho a la mitad del tamaño original */
+    width: 35%; /* Reduce el ancho a la mitad del tamaño original */
     height: auto; /* Mantiene la proporción de la altura con respecto al nuevo ancho */
     border-radius: 40%/40%; /* Hace que los bordes de la imagen sean completamente redondos */
 }
