se acomodo todo el contenido de la pagina al centro como una columna de nuevo

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -5,17 +5,17 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end; /* Alinea el contenido al final (derecha) del contenedor flex */
-    align-items: left;
-    height: 95vh;
+    align-items: center;
+    height: auto;
 }
 main {
     display: flex;
-    justify-content: flex-end; /* Empuja el contenido a la derecha */
-    width: 85%; /* Ocupa el ancho completo para permitir la alineación correcta */
+    justify-content: center; /* Empuja el contenido a la derecha */
+    width: 100%; /* Ocupa el ancho completo para permitir la alineación correcta */
 }
 
 main .texto {
-    text-align: left; /* Alinea el texto hacia la izquierda */
+    text-align: center; /* Alinea el texto hacia la izquierda */
     width: 50%; /* Define el ancho del área de texto para controlar dónde comienza el texto */
 }
 
@@ -57,8 +57,8 @@ a:hover {
 
 #imagen-blog {
     float: left; /* Hace que la imagen flote hacia el lado izquierdo */
-    margin-right: 30px; /* Añade espacio entre la imagen y el texto a su derecha */
+    margin-right: 20px; /* Añade espacio entre la imagen y el texto a su derecha */
     width: 20%; /* Reduce el ancho a la mitad del tamaño original */
     height: auto; /* Mantiene la proporción de la altura con respecto al nuevo ancho */
-    border-radius: 40%/40%; /* Hace que los bordes de la imagen sean completamente redondos */
+    border-radius: 50%; /* Hace que los bordes de la imagen sean completamente redondos */
 }
